{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 18,
  "lineage": "ece1c9aa-3bb4-0ecb-4f1b-7e7c7aeac058",
  "resources": [
    {
      "module": "module.tf-igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264181175:internet-gateway/igw-0460eb8e1b3fc2f10",
            "id": "igw-0460eb8e1b3fc2f10",
            "owner_id": "058264181175",
            "tags": {
              "Name": "Project-IGW"
            },
            "tags_all": {
              "Name": "Project-IGW"
            },
            "vpc_id": "vpc-02ed882293d638cd9"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea80799a59ad106b",
            "arn": "arn:aws:ec2:us-west-1:058264181175:instance/i-0315f07daa4265e93",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0315f07daa4265e93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "Project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bed26a0b3907b58c",
            "private_dns": "ip-10-0-0-20.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.20",
            "public_ip": "54.183.97.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3cae116424bd651",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058a3ee1b1331ef3e",
            "tags": {
              "Name": "Public-Instance-0"
            },
            "tags_all": {
              "Name": "Public-Instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09383ac2a5d604f9f"
            ]
          },
          "dependencies": [
            "module.tf-instance.data.aws_ami.amazon_ec2",
            "module.tf-security-group.aws_security_group.sg_pub",
            "module.tf-subnet.aws_subnet.subnet-pub",
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264181175:route-table/rtb-066fad319c47e884e",
            "id": "rtb-066fad319c47e884e",
            "owner_id": "058264181175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0460eb8e1b3fc2f10",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public RT"
            },
            "tags_all": {
              "Name": "public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ed882293d638cd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-igw.aws_internet_gateway.igw",
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6e8c07820e8a55d",
            "route_table_id": "rtb-066fad319c47e884e",
            "subnet_id": "subnet-058a3ee1b1331ef3e"
          },
          "dependencies": [
            "module.tf-igw.aws_internet_gateway.igw",
            "module.tf-route-table.aws_route_table.public_rt",
            "module.tf-subnet.aws_subnet.subnet-pub",
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264181175:security-group/sg-09383ac2a5d604f9f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09383ac2a5d604f9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "terraform-20240131131230154300000001",
            "name_prefix": "terraform-",
            "owner_id": "058264181175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public-sg"
            },
            "tags_all": {
              "Name": "Public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ed882293d638cd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264181175:subnet/subnet-058a3ee1b1331ef3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058a3ee1b1331ef3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264181175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Sub"
            },
            "tags_all": {
              "Name": "public-Sub"
            },
            "vpc_id": "vpc-02ed882293d638cd9"
          },
          "dependencies": [
            "module.tf-vpc.aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tf-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264181175:vpc/vpc-02ed882293d638cd9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d5dc508b654300f",
            "default_route_table_id": "rtb-08bdbe155795cda5f",
            "default_security_group_id": "sg-03b526876ca269084",
            "dhcp_options_id": "dopt-0a45a3ef1867bdcb3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ed882293d638cd9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bdbe155795cda5f",
            "owner_id": "058264181175",
            "tags": {
              "Name": "Project"
            },
            "tags_all": {
              "Name": "Project"
            }
          }
        }
      ]
    }
  ]
}